Fix too large gap between language name and first version

--- a/src/subtitulamos/resources/assets/css/episode.scss
+++ b/src/subtitulamos/resources/assets/css/episode.scss
@@ -194,7 +194,7 @@
         border-bottom: 1px solid var(--color-gray-divisions-lighter);
         padding: var(--spacing-m) 0;
 
-        &:first-child {
+        &:first-of-type {
           padding-top: 0;
         }
 
